# VizAly-Foresight

./: build.sh  compile-VM.sh
Analysis/: README.md
Analysis/pat/hacc/: workflow.py
Analysis/pat/nyx/: cinema.py  workflow.py
Analysis/pat/utils/: cinema.py  file_utilities.py  gioSqlite.py  job.py  workflow.py
CBench/: CMakeLists.txt
CBench/compressors/: compressorFactory.hpp  compressorIncludes.h  compressorInterface.hpp
CBench/compressors/BLOSC/: CMakeLists.txt
CBench/compressors/BigCrunch/: BigCrunchcompressor.hpp
CBench/compressors/Isabela/: CMakeLists.txt
CBench/compressors/SZ/: CMakeLists.txt
CBench/compressors/zfp/: zfpCompressor.hpp
CBench/compressors/zfp_gpu/: CMakeLists.txt
CBench/dataLoader/NYX/: NYXDataLoader.hpp
CBench/dataLoader/VPIC_GDA/: GDADataLoader.hpp
CBench/utils/: log.hpp  memory.hpp  strConvert.hpp  timer.hpp  utils.hpp
inputs/hacc/: hacc_cbench_sz_test.json  hacc_cbench_test.json
inputs/nyx/: cori_nyx_1k_42_fpzip_sweep_.json  cori_nyx_2k_42_SZ_rel_sweep_.json  cori_nyx_2k_42_fpzip_sweep_.json  cori_nyx_512_42_SZ_abs_sweep_.json  cori_nyx_512_42_SZ_rel_sweep_.json  cori_nyx_512_42_fpzip_sweep_.json  cori_nyx_template.json  darwin_nyx_epyc_test.json  darwin_nyx_galton_test.json  darwin_nyx_gpu_test.json  experimental_nyx_cbench.json  histogram_nyx_cbench.json  nyx_cbench_test.json  parallel_nyx_512.json  test-analysis-cinema.json  test-cinema.json  test.json
inputs/tests/: test-nyx-analysis-cinema.json  test-nyx-cbench.json  test-nyx-cinema.json  test-nyx-foresight.json
scripts/: VizAly-CBench.bash.cori
